--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,97 @@
 .my-nav {
-  background: #404040;
+  background-color: #404040;  
   opacity: 0.85;
 }
 
-.my-nav ul {
-  margin: 10px 0;
+.navbar-default .navbar-nav > li > a {
+    color: #C0C0C0;
+}
+
+.navbar-default .navbar-nav > li > a:hover {
+    color: #fff;
+}
+
+.navbar-default .navbar-toggle {
+    border-color: transparent;
+    background-color: transparent;
+}
+
+.navbar-default .navbar-toggle:hover,
+.navbar-default .navbar-toggle:focus {
+    background-color: transparent;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #C0C0C0;
+}
+/*01.navbar*/
+
+#content > .container > div {
+  padding: 52px 0;
+}
+
+h1 {
+  margin-bottom: 20px;
+}
+
+.my-project {
+  position: relative;
+  display: inline-block;
+  margin-bottom: 10px;
+}
+
+
+#my-avatar {
+  margin-top: 23px;
+}
+
+#about h1 {
+  margin-bottom: -10px;
+}
+
+#about {
+  padding-top: 50px;
+
+}
+
+.table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th {
+   background-color: #FFFAF2;
+
+}
+
+.my-project img { 
+  width: 100%;
+  height: 100%;
+}
+
+.project-info {
+  background-color: rgba(255,255,255,.8);   /* 背景半透明 */
+  padding: 0 15px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  opacity: 0;
+  color: #3C3C3C;
+}
+
+.project-info:hover {
+  opacity: 1;
+  -webkit-transition:all 0.9s linear;
+  -moz-transition:all 0.9s linear;
+  -ms-transition:all 0.9s linear;
+  -o-transition:all 0.9s linear;
+  transition:all 0.9s linear;
+}
+
+.container .my-project .project-info p {
+  padding: 15px 15px;
+  text-align: center;
+
+}
+
+.container .my-project .project-info h3 {
+  text-align: center;
 }
