--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,45 @@
+body {
+  padding-top: 70px;
+}
+/*01.navbar*/
 .my-nav {
   background-color: #404040;  
   opacity: 0.85;
 }
 
 .navbar-default .navbar-nav > li > a {
-    color: #C0C0C0;
+  color: #C0C0C0;
 }
 
 .navbar-default .navbar-nav > li > a:hover {
-    color: #fff;
+  color: #fff;
 }
 
 .navbar-default .navbar-toggle {
-    border-color: transparent;
-    background-color: transparent;
+  border-color: transparent;
+  background-color: transparent;
 }
 
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
-    background-color: #C0C0C0;
+  background-color: #C0C0C0;
 }
-/*01.navbar*/
-
+/*02.project*/
 #content > .container > div {
   padding: 52px 0;
 }
 
+#about h1 {
+  line-height: 0px;
+  margin-bottom: 77px;
+}
+
 h1 {
-  margin-bottom: 20px;
+  margin-bottom: 38px;
 }
 
 .my-project {
@@ -40,23 +48,12 @@ h1 {
   margin-bottom: 10px;
 }
 
-
-#my-avatar {
-  margin-top: 23px;
-}
-
-#about h1 {
-  margin-bottom: -10px;
-}
-
 #about {
   padding-top: 50px;
-
 }
 
 .table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th {
-   background-color: #FFFAF2;
-
+  background-color: #FFFAF2;
 }
 
 .my-project img { 
@@ -89,9 +86,45 @@ h1 {
 .container .my-project .project-info p {
   padding: 15px 15px;
   text-align: center;
-
 }
 
 .container .my-project .project-info h3 {
   text-align: center;
+}
+/*03.contact*/
+#contact {
+  margin-bottom: 50px
+}
+
+button {
+  float: right;
+  margin-right: 5px;
+}
+
+hr {
+  border: 2px solid #ff6600;
+  width: 80px;
+  margin: 0 auto;
+  margin-top: 50px;
+  margin-bottom: 80px;
+}
+
+footer {
+  background-color: #000;
+  color:#fff;
+  text-align: center;
+  padding: 80px 0;
+}
+
+.footer-content p {
+  line-height: 22px;
+}
+
+.footer-social-icon a i {
+  color: #fff;
+  display: inline-block;
+  font-size: 14px;
+  line-height: 20px;
+  margin-top: 15px;
+  margin-right: 15px;
 }
